<resources>
    <string name="about_comments">Create and share your notes with OI Notepad.</string>
    <string name="about_translators">translator-credits</string>
    <string name="all_notes">All notes</string>
    <string name="already_encrypted">Already encrypted.</string>
    <string name="app_name">OI Notepad</string>
    <string name="button_dont_save">"Don't save"</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete this note?</string>
    <string name="confirm_delete_title">Deletion Confirmation</string>
    <string name="decryption_failed">Decryption failed.</string>
    <string name="dropdown_hint">Touch to see list</string>
    <string name="empty_note">Empty note</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypting_note">Encrypting note</string>
    <string name="encryption_failed">Encryption failed.</string>
    <string name="error_message">Error loading note</string>
    <string name="error_reading_file">Error while reading file</string>
    <string name="error_title">Error</string>
    <string name="error_writing_file">Error while writing file</string>
    <string name="file_not_found">File not found</string>
    <string name="filename">File name</string>
    <string name="get_more_themes">Get more themes</string>
    <string name="menu_decrypt">Decrypt</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_do_not_encrypt">Do not encrypt</string>
    <string name="menu_edit_tags">Edit tags</string>
    <string name="menu_encrypt">Encrypt</string>
    <string name="menu_import">Import</string>
    <string name="menu_insert">Add note</string>
    <string name="menu_open_from_sdcard">Open from SD card</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save as</string>
    <string name="menu_save_to_sdcard">Save to SD card</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_undo_encryption">Undo encryption</string>
    <string name="menu_word_count">Word count</string>
    <string name="new_note">New note</string>
    <string name="no_notes">Use menu to add new notes.</string>
    <string name="no_notes_actionbar">Use the option above to add new notes.</string>
    <string name="not_encrypted">Not encrypted.</string>
    <string name="note_editor_preferences">Note Editor</string>
    <string name="note_saved">Note saved</string>
    <string name="noteslist_preferences">Notes List</string>
    <string name="oi_distribution_about">About</string>
    <string name="oi_distribution_aboutapp">OI About</string>
    <string name="oi_distribution_aboutapp_get">Get OI About</string>
    <string name="oi_distribution_aboutapp_not_available">No compatible extension available to display full info (contact, credits, license).</string>
    <string name="oi_distribution_app_name">OI Distribution Library</string>
    <string name="oi_distribution_barcodescanner">Barcode OI Plugin</string>
    <string name="oi_distribution_barcodescanner_not_available">No compatible barcode scanner is available.</string>
    <string name="oi_distribution_download_market">Market download</string>
    <string name="oi_distribution_download_market_message">Please download %s from the Market or the OpenIntents website.</string>
    <string name="oi_distribution_download_message">Please download %s from the OpenIntents website.</string>
    <string name="oi_distribution_download_title">Download %s</string>
    <string name="oi_distribution_download_web">Web download</string>
    <string name="oi_distribution_eula_accept">Accept</string>
    <string name="oi_distribution_eula_message">Please read and accept the following End User License Agreement (EULA) for %s.</string>
    <string name="oi_distribution_eula_refuse">Cancel</string>
    <string name="oi_distribution_eula_title">%s EULA</string>
    <string name="oi_distribution_filemanager">OI File Manager</string>
    <string name="oi_distribution_filemanager_not_available">No compatible file manager is available.</string>
    <string name="oi_distribution_info_activity_text">%s can be used with the following applications:</string>
    <string name="oi_distribution_info_instructions">Instructions</string>
    <string name="oi_distribution_info_launch">Launch %s</string>
    <string name="oi_distribution_info_not_available">%1$s requires %2$s %3$s or higher.</string>
    <string name="oi_distribution_launch_error">Application could not be launched</string>
    <string name="oi_distribution_menu_update">Check updates</string>
    <string name="oi_distribution_name_and_version">%1$s %2$s</string>
    <string name="oi_distribution_newversion_continue">Continue</string>
    <string name="oi_distribution_newversion_message">Welcome to this new version of %s.</string>
    <string name="oi_distribution_newversion_recent_changes">Recent changes:</string>
    <string name="oi_distribution_safe">OI Safe</string>
    <string name="oi_distribution_safe_not_available">No compatible application for encryption is available.</string>
    <string name="oi_distribution_safe_not_available_decrypt">"No compatible application for decryption is available.

Note: You have to restore the master key from a backup file in order to access previously encrypted data."</string>
    <string name="oi_distribution_support">Support</string>
    <string name="oi_distribution_supportapp">OI Support</string>
    <string name="oi_distribution_supportapp_get">Get OI Support</string>
    <string name="oi_distribution_supportapp_not_available">No compatible extension available to display full info (Help/FAQ, Contact Developers, Feature request, Donations).</string>
    <string name="oi_distribution_update_app">OI Update</string>
    <string name="oi_distribution_update_box_text">Check manually for updates or install OI Update for automatic notifications.</string>
    <string name="oi_distribution_update_check_now">Check now</string>
    <string name="oi_distribution_update_error">Download application not available.</string>
    <string name="oi_distribution_update_get_updater">Get OI Updater</string>
    <string name="oi_notepad_permission_read">read notes</string>
    <string name="oi_notepad_permission_read_descr">Allows an application to read notes. Note that encrypted notes are provided in the encrypted format.</string>
    <string name="oi_notepad_permission_write">write notes</string>
    <string name="oi_notepad_permission_write_descr">Allows an application to create new notes or modify existing notes.</string>
    <string name="oi_safe_permission_intents">encrypt and decrypt data</string>
    <string name="oi_safe_permission_intents_descr">Allows the application to encrypt and decrypt text, and access the passwords they have stored in OI Safe.</string>
    <string name="oi_shopping_permission_read">read shopping lists</string>
    <string name="oi_shopping_permission_read_descr">Allows an application to read shopping lists. Note that encrypted lists and items are provided in the encrypted format.</string>
    <string name="oi_shopping_permission_write">write shopping lists</string>
    <string name="oi_shopping_permission_write_descr">Allows an application to create new lists and items or modify existing ones.</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="preference_addons">Add-ons</string>
    <string name="preference_autolink_summary_off">Do not create links on notes</string>
    <string name="preference_autolink_summary_on">Create links for phone numbers and email/street/web addresses</string>
    <string name="preference_autolink_title">Auto-create Links</string>
    <string name="preference_charcount_summary_off">Do not show character count in editor</string>
    <string name="preference_charcount_summary_on">Show character count in editor</string>
    <string name="preference_charcount_title">Character count</string>
    <string name="preference_developer_extensions_summary">Get extensions from the OpenIntents homepage.</string>
    <string name="preference_developer_themes_summary">Get themes from the OpenIntents homepage.</string>
    <string name="preference_extensions">Extensions</string>
    <string name="preference_fontsize">Font size</string>
    <string name="preference_fontsize_dialog_title">Choose font size</string>
    <string name="preference_fontsize_summary">Change font size</string>
    <string name="preference_get_addons">Get new add-ons</string>
    <string name="preference_get_addons_summary">Search for extensions and themes online.</string>
    <string name="preference_get_developer_addons">Get add-ons from OpenIntents</string>
    <string name="preference_get_market_addons">Get add-ons from Market</string>
    <string name="preference_market_extensions_summary">Search for extensions at Android Market.</string>
    <string name="preference_market_themes_summary">Search for themes at Android Market.</string>
    <string name="preference_marquee_summary">Continuously scroll note titles that are too long.</string>
    <string name="preference_marquee_title">Marquee note titles.</string>
    <string name="preference_sortorder_dialog_title">List Sorting Order</string>
    <string name="preference_sortorder_summary">The order in which notes are shown in the notes list</string>
    <string name="preference_sortorder_title">List Sorting Order</string>
    <string name="preference_themes">Themes</string>
    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>
    <string name="save">Save</string>
    <string name="search_found_no_results">No results found for %s.</string>
    <string name="search_hint">Search</string>
    <string name="search_label">OI Notepad search</string>
    <string name="search_query_results">OI Notepad</string>
    <string name="search_settings_description">Titles of your notes</string>
    <string name="settings">Settings</string>
    <string name="settings_sortorder">Sort Order</string>
    <string name="share_not_available">No application available for sharing.</string>
    <string name="tags_hint">Enter tags, separated by comma</string>
    <string name="theme_default">Default</string>
    <string name="theme_monospaced">Monospaced font</string>
    <string name="theme_pick">Pick a theme</string>
    <string name="theme_serif">Serif font</string>
    <string name="title_create">Create note</string>
    <string name="title_create_file">%s (new note)</string>
    <string name="title_edit">Edit note</string>
    <string name="title_edit_file">%s (edit note)</string>
    <string name="title_edit_title">Note title:</string>
    <string name="title_note">Note</string>
    <string name="title_notes_list">OI Notepad</string>
    <string name="title_pick_note_for_shortcut">Pick note for shortcut</string>
    <string name="use_theme_for_all_lists">Use this theme for all lists</string>
    <string name="warning_file_exists_message">Do you really want to overwrite the existing file?</string>
    <string name="warning_file_exists_title">File exists already</string>
    <string name="preference_developer_extensions_link">http://www.openintents.org/en/notepad#extensions</string>
    <string name="preference_developer_themes_link">http://www.openintents.org/en/notepad#themes</string>
    <string name="preference_market_extensions_link" formatted="false">market://search?q=extension%20oi%20notepad</string>
    <string name="preference_market_themes_link" formatted="false">market://search?q=theme%20oi%20notepad</string>
</resources>