<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/noteslist_preferences">
        <ListPreference android:entries="@array/preference_sortorder_entries" android:title="@string/preference_sortorder_title" android:key="sortorder" android:summary="@string/preference_sortorder_summary" android:defaultValue="2" android:dialogTitle="@string/preference_sortorder_dialog_title" android:entryValues="@array/preference_sortorder_entryvalues" />
        <CheckBoxPreference android:title="@string/preference_marquee_title" android:key="marquee" android:summary="@string/preference_marquee_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_editor_preferences">
        <ListPreference android:entries="@array/preference_fontsize_entries" android:title="@string/preference_fontsize" android:key="fontsize" android:summary="@string/preference_fontsize_summary" android:defaultValue="2" android:dialogTitle="@string/preference_fontsize_dialog_title" android:entryValues="@array/preference_fontsize_entryvalues" />
        <CheckBoxPreference android:title="@string/preference_autolink_title" android:key="autolink" android:defaultValue="true" android:summaryOn="@string/preference_autolink_summary_on" android:summaryOff="@string/preference_autolink_summary_off" />
        <CheckBoxPreference android:title="@string/preference_charcount_title" android:key="charcount" android:defaultValue="false" android:summaryOn="@string/preference_charcount_summary_on" android:summaryOff="@string/preference_charcount_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_addons">
        <PreferenceScreen android:title="@string/preference_get_addons" android:key="preference_screen_addons" android:summary="@string/preference_get_addons_summary">
            <PreferenceCategory android:title="@string/preference_get_market_addons">
                <PreferenceScreen android:title="@string/preference_extensions" android:key="preference_market_extensions" android:summary="@string/preference_market_extensions_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_market_extensions_link" />
                </PreferenceScreen>
                <PreferenceScreen android:title="@string/preference_themes" android:key="preference_market_themes" android:summary="@string/preference_market_themes_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_market_themes_link" />
                </PreferenceScreen>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_get_developer_addons">
                <PreferenceScreen android:title="@string/preference_extensions" android:summary="@string/preference_developer_extensions_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_developer_extensions_link" />
                </PreferenceScreen>
                <PreferenceScreen android:title="@string/preference_themes" android:summary="@string/preference_developer_themes_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_developer_themes_link" />
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>